--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,6 +1,7 @@
-.content {
-  grid-area: c;
-  background-color: cornflowerblue;
-
+.postsBlock {
+  padding: 10px;
 }
 
+.posts {
+  margin-top: 10px;
+}
