--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,7 +5,14 @@
 }
 
 .header img {
-  width: 20 px;
-  /* height: 20 px; */
+  width: 200px;
+   /*height: 20px;*/
 }
 
+.loginBlock {
+  float: right;
+}
+
+.loginBlock a {
+  color: white;
+}
